# Nissan-Sunny-B12-Rz1-Digital-Cluster-Conversion-ECU-Firmware

./: .cproject  .gitignore  Dockerfile  README.md  SunnyRz1FuelGaugeConverter-Debug_sw.tool.sunny_rz1_fuel_gauge_converter_stm32f303_copy Configuration.launch  build_docker.sh  buildall.sh  run_cmake.sh  run_cmake_debug.sh  run_cmake_f3.sh  run_cmake_f4.sh  run_docker.bat  run_docker.sh
Inc/: hwheader.h  (+6 more)
Src/: CMakeLists.txt  main.cpp  stm32f3xx_hal_msp.c  stm32f3xx_it.c
Src/app/can_diagnostics/inc/: can_diagnostics.hpp
Src/app/can_diagnostics/src/: can_diagnostics.cpp
Src/app/console_commands/inc/: console_commands.hpp
Src/app/console_commands/src/: console_commands.cpp
Src/app/dataset/: CMakeLists.txt
Src/app/dataset/inc/: dataset.hpp
Src/app/dataset/src/: dataset.cpp
Src/app/eol/inc/: eol.hpp
Src/app/eol/src/: eol.cpp
Src/app/eol_command/inc/: eol_command.hpp
Src/app/eol_command/src/: eol_command.cpp
Src/app/fuel_gauge_input/: CMakeLists.txt
Src/app/fuel_gauge_input/inc/: fuel_gauge_input.hpp
Src/app/fuel_gauge_input/src/: fuel_gauge_input.cpp
Src/app/fuel_gauge_output/: CMakeLists.txt
Src/app/fuel_gauge_output/inc/: fuel_gauge_output.hpp
Src/app/fuel_gauge_output/src/: fuel_gauge_output.cpp
Src/app/ima_data_provider/inc/: ima_data_provider.hpp
Src/app/ima_data_provider/src/: ima_data_provider.cpp
Src/app/lookup_table/inc/: lookup_table.hpp
Src/app/lookup_table_editor/inc/: lookup_table_editor.hpp
Src/app/lookup_table_editor/src/: lookup_table_editor.cpp
Src/app/main_application/: CMakeLists.txt
Src/app/main_application/inc/: cyclic_thread_100ms.hpp  main_application.hpp
Src/app/main_application/src/: main_application.cpp
Src/app/pwm_tester/src/: pwm_tester.cpp
Src/app/replay_curve/: CMakeLists.txt
Src/app/speed_sensor_converter/inc/: speed_sensor_converter.hpp
Src/app/speed_sensor_converter/src/: speed_sensor_converter.cpp
Src/app/version_info/: CMakeLists.txt
Src/app/version_info/inc/: version_info.hpp
Src/app/version_info/src/: version_info.cpp  version_info.cpp.in
Src/can_stack/: CMakeLists.txt
Src/can_stack/Can/: Can.c  Can.h  Can_GeneralTypes.h
Src/can_stack/CanIf/: CanIf.c  CanIf_Cfg.c  CanIf_Cfg.h  CanIf_Types.h
Src/can_stack/autosar/: CMakeLists.txt
Src/can_stack/autosar/Can/: Can.c  Can.h
Src/can_stack/autosar/CanIf/: CanIf.c  CanIf.h  CanIf_Cfg.c  CanIf_Cfg.h  CanIf_Types.h
Src/can_stack/autosar/Det/: Det.c
Src/can_stack/autosar/config/: Can_Cfg.h  Can_Lcfg.c
Src/can_stack/config/: Can_Cfg.h  Can_Lcfg.c
Src/drivers/adc/inc/: stm32_adc.hpp
Src/drivers/adc/src/: stm32_adc.cpp
Src/drivers/dac/: CMakeLists.txt
Src/drivers/dac/inc/: generic_dac.hpp  stm32_dac.hpp
Src/drivers/dac/src/: stm32_dac.cpp
Src/drivers/eeprom/: CMakeLists.txt
Src/drivers/eeprom/inc/: eeprom.h  eepromConfig.h
Src/drivers/eeprom/src/: eeprom.c
Src/drivers/pwm/inc/: generic_pwm.hpp  stm32_pwm.hpp
Src/drivers/pwm/src/: stm32_pwm.cpp
Src/drivers/pwm_ic/inc/: generic_pwm_ic.hpp  stm32_pwm_ic.hpp
Src/drivers/pwm_ic/src/: stm32_pwm_ic.cpp
Src/drivers/stm32_peripherals/: CMakeLists.txt
Src/drivers/stm32_peripherals/inc/: stm32fxxx_it.h
Src/drivers/uart/: CMakeLists.txt
Src/drivers/uart/inc/: generic_uart.hpp  stm32_uart.hpp
Src/drivers/uart/src/: stm32_uart.cpp
Src/drivers/uc_ports/: CMakeLists.txt
Src/drivers/uc_ports/inc/: uc_ports.hpp
Src/drivers/uc_ports/src/: uc_ports.cpp
Src/midware/FreeRTOS/: CMakeLists.txt
Src/midware/FreeRTOS/adapt/: FreeRTOSConfig.h
Src/midware/FreeRTOS/src/: tasks.c
Src/midware/cppstdlib/: CMakeLists.txt  condition_variable.h  freertos_time.h  gthr_key.cpp  gthr_key_type.h  mutex.cc  thread.cpp  thread_gthread.h
Src/midware/event_handler/src/: event_handler.cpp
Src/midware/events/: event_handler.cpp  event_handler.h
Src/midware/excp_handler/inc/: excp_handler.hpp  excp_handler_console_commands.hpp  excp_handler_if.h
Src/midware/excp_handler/src/: excp_handler.cpp  excp_handler_console_commands.cpp
Src/midware/nonvolatile_data/: CMakeLists.txt
Src/midware/nonvolatile_data/inc/: nonvolatile_data.hpp  nonvolatile_data_handler.hpp
Src/midware/nonvolatile_data/src/: nonvolatile_data_handler.cpp
Src/midware/osservices/os_threads/: CMakeLists.txt
Src/midware/std_ex/: CMakeLists.txt
Src/midware/std_ex/ex_threads/: ex_thread.cpp  ex_thread.hpp
Src/midware/stdlib/src/: stdlib.cpp
Src/midware/trace/: CMakeLists.txt
Src/midware/trace/inc/: trace.hpp  trace_if.h
Src/midware/trace/src/: trace.cpp
Src/midware/util_algorithms/: CMakeLists.txt
Src/midware/util_algorithms/inc/: util_algorithms.hpp
Src/midware/util_algorithms/src/: util_algorithms.cpp
Src/misc/ascii_arts/inc/: ascii_diagram.hpp
Src/misc/ascii_arts/src/: ascii_diagram.cpp
Src/misc/ascii_graph/: CMakeLists.txt
Src/misc/libs/libfort/: CMakeLists.txt  fort.c  fort.h
Src/misc/libs/libtable/: CMakeLists.txt  libtable.c
src/: CMakeLists.txt  main.cpp  stm32f3xx_it.c
src/app/console_commands/: CMakeLists.txt
src/app/console_commands/src/: console_commands.cpp
src/app/eol/: CMakeLists.txt
src/app/eol_command/: CMakeLists.txt
src/app/fuel_gauge_input/: CMakeLists.txt
src/app/ima_data_provider/: CMakeLists.txt
src/app/lookup_table/: CMakeLists.txt
src/app/lookup_table_editor/: CMakeLists.txt
src/app/main_application/: CMakeLists.txt
src/app/pwm_tester/: CMakeLists.txt
src/app/speed_sensor_converter/: CMakeLists.txt
src/app/version_info/: CMakeLists.txt
src/drivers/adc/: CMakeLists.txt
src/drivers/eeprom/: CMakeLists.txt
src/drivers/mcu_interface/: CMakeLists.txt
src/drivers/pwm/: CMakeLists.txt
src/drivers/pwm_ic/: CMakeLists.txt
src/drivers/sysclock/: CMakeLists.txt
src/drivers/uart/: CMakeLists.txt
src/midware/FreeRTOS/: CMakeLists.txt
src/midware/cppstdlib/: CMakeLists.txt
src/midware/event_handler/: CMakeLists.txt
src/midware/excp_handler/: CMakeLists.txt
src/midware/osservices/: CMakeLists.txt
src/midware/stdlib/: CMakeLists.txt
src/midware/util_algorithms/: CMakeLists.txt
src/midware/watchdog/: CMakeLists.txt
(+263 files in other folders)
